# pkg/routers/router.go
@@ -76,7 +76,7 @@ func (r *LangRouter) Chat(ctx context.Context, request *schemas.ChatRequest) (*s
 			langModel := model.(providers.LanguageModel)
 
 			// Check if there is an override in the request
-			if request.Override != (schemas.OverrideChatRequest{}) {
+			if request.Override != nil {
 				// Override the message if the language model ID matches the override model ID
 				if langModel.ID() == request.Override.Model {
 					request.Message = request.Override.Message
@@ -86,7 +86,7 @@ func (r *LangRouter) Chat(ctx context.Context, request *schemas.ChatRequest) (*s
 			resp, err := langModel.Chat(ctx, request)
 			if err != nil {
 				r.telemetry.Logger.Warn(
-					"lang model failed processing chat request",
+					"Lang model failed processing chat request",
 					zap.String("routerID", r.ID()),
 					zap.String("modelID", langModel.ID()),
 					zap.String("provider", langModel.Provider()),
@@ -103,7 +103,7 @@ func (r *LangRouter) Chat(ctx context.Context, request *schemas.ChatRequest) (*s
 
 		// no providers were available to handle the request,
 		//  so we have to wait a bit with a hope there is some available next time
-		r.telemetry.Logger.Warn("no healthy model found, wait and retry", zap.String("routerID", r.ID()))
+		r.telemetry.Logger.Warn("No healthy model found, wait and retry", zap.String("routerID", r.ID()))
 
 		err := retryIterator.WaitNext(ctx)
 		if err != nil {
@@ -113,7 +113,73 @@ func (r *LangRouter) Chat(ctx context.Context, request *schemas.ChatRequest) (*s
 	}
 
 	// if we reach this part, then we are in trouble
-	r.telemetry.Logger.Error("no model was available to handle request", zap.String("routerID", r.ID()))
+	r.telemetry.Logger.Error("No model was available to handle request", zap.String("routerID", r.ID()))
 
 	return nil, ErrNoModelAvailable
+}
+
+func (r *LangRouter) ChatStream(ctx context.Context, request *schemas.ChatRequest, responseC chan<- schemas.ChatResponse) error {
+	if len(r.models) == 0 {
+		return ErrNoModels
+	}
+
+	retryIterator := r.retry.Iterator()
+
+	for retryIterator.HasNext() {
+		modelIterator := r.routing.Iterator()
+
+		for {
+			model, err := modelIterator.Next()
+
+			if errors.Is(err, routing.ErrNoHealthyModels) {
+				// no healthy model in the pool. Let's retry after some time
+				break
+			}
+
+			langModel := model.(providers.LanguageModel)
+
+			if !langModel.SupportChatStream() {
+				r.telemetry.Logger.Warn("Lang model doesn't support streaming chat API",
+					zap.String("routerID", r.ID()),
+					zap.String("modelID", langModel.ID()),
+					zap.String("provider", langModel.Provider()),
+				)
+
+				continue
+			}
+
+			err = langModel.ChatStream(ctx, request, responseC)
+			if err != nil {
+				r.telemetry.Logger.Warn(
+					"Lang model failed processing chat request",
+					zap.String("routerID", r.ID()),
+					zap.String("modelID", langModel.ID()),
+					zap.String("provider", langModel.Provider()),
+					zap.Error(err),
+				)
+
+				continue
+			}
+
+			return nil
+		}
+
+		// no providers were available to handle the request,
+		//  so we have to wait a bit with a hope there is some available next time
+		r.telemetry.Logger.Warn("No healthy model found, wait and retry", zap.String("routerID", r.ID()))
+
+		err := retryIterator.WaitNext(ctx)
+		if err != nil {
+			// something has cancelled the context
+			return err
+		}
+	}
+
+	// if we reach this part, then we are in trouble
+	r.telemetry.Logger.Error(
+		"No model was available to handle request. Try to configure more fallback models to avoid this",
+		zap.String("routerID", r.ID()),
+	)
+
+	return ErrNoModelAvailable
 }
